# raytracer

./: .gitignore  CMakeLists.txt  main.cpp
lib/: Circle.h  Color.h  GlobalLight.cpp  GlobalLight.h  Hit.h  Level.cpp  Level.h  Light.h  Mirror.cpp  Mirror.h  Object.h  Plane.h  PointLight.cpp  PointLight.h  Ray.h  Raytracer.cpp  Raytracer.h  Rectangle.h  Sphere.h  TextureRect.cpp  TextureRect.h  Vec3.h
